// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Initial render 1`] = `
<div
  className="trackSlider"
>
  <p
    className="trackSlider__text trackSlider__text--min"
  >
    0:0
  </p>
  <div
    className="trackSlider__range-container"
  />
  <p
    className="trackSlider__text trackSlider__text--max"
  >
    1:27:04
  </p>
</div>
`;

exports[`Unzoomed render 1`] = `
<div
  className="trackSlider"
>
  <p
    className="trackSlider__text trackSlider__text--min"
  >
    0:4
  </p>
  <div
    className="trackSlider__range-container"
  />
  <p
    className="trackSlider__text trackSlider__text--max"
  >
    1:22
  </p>
</div>
`;

exports[`Zoomed render 1`] = `
<div
  className="trackSlider"
>
  <p
    className="trackSlider__text trackSlider__text--min"
  >
    0:4
  </p>
  <div
    className="trackSlider__range-container"
  />
  <p
    className="trackSlider__text trackSlider__text--max"
  >
    1:22
  </p>
</div>
`;
